kustomizations/media/wiki/database-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: wikijs-postgresql
spec:
  serviceName: wikijs-postgresql
  replicas: 0
  selector:
    matchLabels:
      app: wikijs-postgresql
      app.kubernetes.io/name: wikijs-postgresql
  template:
    metadata:
      labels:
        app: wikijs-postgresql
        app.kubernetes.io/name: wikijs-postgresql
    spec:
      containers:
      - name: postgres
        image: postgres:15
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: wikijs-postgresql-storage
          mountPath: /var/lib/postgresql/data
        livenessProbe:
          exec:
            command: [ "pg_isready", "-U", "wikijs" ]
          initialDelaySeconds: 20
          periodSeconds: 30
          failureThreshold: 3
        readinessProbe:
          exec:
            command: [ "pg_isready", "-U", "wikijs" ]
          initialDelaySeconds: 10
          periodSeconds: 15
          failureThreshold: 3
        resources:
          requests:
            cpu: 5m
            memory: 256Mi
      volumes:
      - name: wikijs-postgresql-storage
        persistentVolumeClaim:
          claimName: wikijs-postgresql-pvc
