kustomizations/media/wiki/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wikijs
  labels:
    tier: disposable
spec:
  replicas: 0
  selector:
    matchLabels:
      app: wikijs
      app.kubernetes.io/name: wikijs
  template:
    metadata:
      labels:
        app: wikijs
        app.kubernetes.io/name: wikijs
    spec:
      containers:
      - name: wikijs
        image: ghcr.io/requarks/wiki:latest
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 512Mi
        livenessProbe:
          httpGet:
            path: /healthz
            port: 3000
          periodSeconds: 30
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /healthz
            port: 3000
          periodSeconds: 15
          failureThreshold: 3
        volumeMounts:
        - name: config
          mountPath: /wiki/config.yml
          subPath: config.yml
      volumes:
      - name: config
        configMap:
          name: wikijs-config
