kustomizations/media/wiki/server-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wikijs
  annotations:
    external-dns.alpha.kubernetes.io/hostname: wiki.lan
  labels:
    app.kubernetes.io/name: wikijs
    type: LoadBalancer
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.1.24
  selector:
    app.kubernetes.io/name: wikijs
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 3000
