kustomizations/media/wiki/server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wiki
spec:
  ingressClassName: cloudflare-tunnel
  rules:
  - host: wiki.citocafecito.work
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: wiki
              port:
                number: 80
